##############################################################################
#   Copyright (C) 2019 GSI Helmholtzzentrum für Schwerionenforschung GmbH    #
#   Copyright (C) 2019-2023 Members of R3B Collaboration                     #
#                                                                            #
#             This software is distributed under the terms of the            #
#                 GNU General Public Licence (GPL) version 3,                #
#                    copied verbatim in the file "LICENSE".                  #
#                                                                            #
# In applying this license GSI does not waive the privileges and immunities  #
# granted to it by virtue of its status as an Intergovernmental Organization #
# or submit itself to any jurisdiction.                                      #
##############################################################################

set(SRCS
    # cmake-format: sortable
    R3BCoarseTimeStitch.cxx
    R3BDataPropagator.cxx
    R3BDetector.cxx
    R3BEventHeader.cxx
    R3BEventHeaderPropagator.cxx
    R3BException.cxx
    R3BFileSource.cxx
    R3BFileSource2.cxx
    R3BDataMonitor.cxx
    R3BLogger.cxx
    R3BModule.cxx
    R3BTcutPar.cxx
    R3BTsplinePar.cxx
    R3BWhiterabbitPropagator.cxx)

set(HEADERS
    # cmake-format: sortable
    R3BCoarseTimeStitch.h
    R3BDataPropagator.h
    R3BDetector.h
    R3BEventHeader.h
    R3BEventHeaderPropagator.h
    R3BException.h
    R3BFileSource.h
    R3BFileSource2.h
    R3BDataMonitor.h
    R3BIOConnector.h
    R3BLogger.h
    R3BModule.h
    R3BShared.h
    R3BTcutPar.h
    R3BTsplinePar.h
    R3BWhiterabbitPropagator.h
    R3BFormatters.h
    R3BValueError.h)

add_library(R3BBase SHARED ${SRCS})
target_include_directories(R3BBase PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(
    R3BBase # cmake-format: sortable
    PUBLIC GeoBase
           ParBase
           Base
           Gen
           Online
           FairTools
           ROOT::Geom
           ROOT::Physics
           ROOT::Matrix
           ROOT::Hist
           ROOT::Graf
           ROOT::Gpad
           ROOT::Net
           ROOT::Imt
           VMCLibrary
           ROOT::Core
           ROOT::MathCore
           ROOT::RIO
           ROOT::RHTTP
           ROOT::Spectrum
           FairLogger::FairLogger
           fmt::fmt)
target_link_directories(R3BBase PUBLIC ${FAIRROOTPATH}/lib)

if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU" AND CMAKE_CXX_COMPILER_VERSION VERSION_LESS 9)
    target_link_libraries(R3BBase PUBLIC -lstdc++fs)
endif()
root_generate_dictionary(R3BBase_dict ${HEADERS} MODULE R3BBase LINKDEF BaseLinkDef.h)
